2008-06-10  Matthias Clasen <mclasen@redhat.com>

	* gio.symbols:
	* gthemedicon.[hc] (g_themed_icon_prepend_name): New function,
	to add a name to the front of the list.

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	Bug 537392 – Additional colon in xattr name

	* glocalfileinfo.c (set_xattr): Skip the second colon of the prefix,
	too. Reported by  Alessandro Morandi 

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	Bug 536641 – Filesystem querying in gio does not list AFS and autofs
	file systems

	* glocalfile.c (get_fs_type): Add afs and autofs.
	Patch by Danny Baumann.

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	Bug 528600 – g_dummy_file_get_parent("scheme://example.com/")

	* gdummyfile.c (g_dummy_file_get_parent): Return NULL if there
	is no parent.  (Owen Taylor, patch by Christian Neumair)
	
2008-06-10  Paolo Borelli  <pborelli@katamail.com>

	* gfile.c (g_file_replace_contents): do not leak the output stream.

2008-06-10  Michael Natterer  <mitch@imendio.com>

	* gcontenttype.c (g_content_type_get_icon): fix SEGV by not using
	uninitialized memory as array index.

2008-06-10  Tor Lillqvist  <tml@novell.com>

	* gcontenttype.c (g_content_type_can_be_executable)
	(g_content_type_get_icon) [Win32]: Add TODO comments.

2008-06-09  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime/Makefile.am: Fix the build

2008-06-09  Matthias Clasen  <mclasen@redhat.com>

	* gcontenttype.c (g_content_type_get_icon): Use icons specified
	in the shared mime database, if available.

	* xdgmime/*: Sync with upstream. This brings support for
	glob weights, generic icons, and changes the cache format to 
	version 1.1.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* Makefile.am: don't define G_DISABLE_SINGLE_INCLUDES, it's in
	the global CPPFLAGS now.

	* tests/data-input-stream.c
	* tests/data-output-stream.c
	* tests/g-file-info.c
	* tests/g-file.c
	* tests/live-g-file.c
	* tests/memory-input-stream.c: don't include <glib/gtestutils.h>
